<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>path_planning_pkg</name>
  <version>1.0.0</version>
  <description>
    ROS2 path planning package implementing RRT
    for custom world in Gazebo simulation.
  </description>
  <maintainer email="gmohanasundaram17@gmail.com.com">Your Name</maintainer>
  <license>MIT</license>

 <!-- Core ROS2 dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>action_msgs</depend>
 
  <!-- Navigation and SLAM -->
  <depend>nav2_core</depend>
  <depend>nav2_common</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_behavior_tree</depend>
  <depend>nav2_bringup</depend>
  <depend>slam_toolbox</depend>
 
  <!-- Robot control -->
  <depend>teleop_twist_keyboard</depend>
 
  <!-- Gazebo and RViz -->
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>rviz2</depend>
 
  <!-- TurtleBot3 packages -->
  <depend>turtlebot3</depend>
  <depend>turtlebot3_gazebo</depend>
  <depend>turtlebot3_navigation2</depend>
 
  <!-- Build and test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
 
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
